--- a/XTS/raw-xts-api-demo/core/pom.xml
+++ b/XTS/raw-xts-api-demo/core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.2.23.Final-SNAPSHOT</version>
+        <version>5.5.23.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-      <version.narayana>5.2.23.Final-SNAPSHOT</version.narayana>
+      <version.narayana>5.5.23.Final</version.narayana>
     </properties>
 
     <repositories>
