--- a/jta-and-hibernate/pom.xml
+++ b/jta-and-hibernate/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>jta-and-hibernate</artifactId>
-    <version>5.2.23.Final-SNAPSHOT</version>
+    <version>5.5.23.Final</version>
 
     <name>Narayana Quickstarts: Standalone JTA 1.2 and Hibernate Quickstart</name>
     <description>Example shows how to use new JTA 1.2 annotations and Hibernate in standalone application</description>
@@ -39,7 +39,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.maven-surefire-plugin>2.19.1</version.maven-surefire-plugin>
-        <version.narayana>5.2.23.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.5.23.Final</version.narayana>
         <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
         <version.org.jboss.naming>5.0.3.GA</version.org.jboss.naming>
         <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
