--- a/STM/pessimistic/pom.xml
+++ b/STM/pessimistic/pom.xml
@@ -16,10 +16,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.narayana.quickstart.stm</groupId>
 	<artifactId>pessimistic</artifactId>
-	<version>5.2.24.Final</version>
+	<version>5.2.25.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
         <properties>
-                <version.narayana>5.2.24.Final</version.narayana>
+                <version.narayana>5.2.25.Final-SNAPSHOT</version.narayana>
         </properties>
 	<repositories>
 		<repository>
