--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>rts-quickstarts</artifactId>
-  <version>5.5.8.Final-SNAPSHOT</version>
+  <version>5.5.24.Final</version>
   <name>RESTTX Quickstarts</name>
   <description>Provides examples of how to use transactions with web applications</description>
   <packaging>pom</packaging>
