--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -14,7 +14,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstarts</groupId>
   <artifactId>jboss-as-jts-parent</artifactId>
-  <version>5.6.0.Final</version>
+  <version>5.6.1.Final-SNAPSHOT</version>
   <name>JBoss AS Quickstarts: Java Transaction Service</name>
   <description>Using CMT with JTS</description>
   <packaging>pom</packaging>
