--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -15,12 +15,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>maven</artifactId>
-    <version>5.6.1.Final-SNAPSHOT</version>
+    <version>5.6.1.Final</version>
     <packaging>jar</packaging>
     <name>basic maven example</name>
     <description>basic maven example</description>
     <properties>
-      <version.narayana>5.6.1.Final-SNAPSHOT</version.narayana>
+      <version.narayana>5.6.1.Final</version.narayana>
     </properties>
     <repositories>
         <repository>
