--- a/wildfly/setCheckedActionFactoryExample/pom.xml
+++ b/wildfly/setCheckedActionFactoryExample/pom.xml
@@ -25,7 +25,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.narayana</groupId>
 	<artifactId>setCheckedActionFactoryExample</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>5.6.2.Final-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<properties>
