--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,6 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 
   <modules>
     <module>at</module>
+    <module>lra</module>
   </modules>
 </project>
