--- a/ArjunaJTS/interop/pom.xml
+++ b/ArjunaJTS/interop/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>jts-interop-quickstart</artifactId>
-  <version>5.6.2.Final-SNAPSHOT</version>
+  <version>5.6.2.Final</version>
   <name>JTS Interoperability Quickstart Parent pom</name>
   <description>Transactional EJB calls between GlassFish and WildFly</description>
   <packaging>pom</packaging>
