--- a/spring/jta/pom.xml
+++ b/spring/jta/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.spring</groupId>
         <artifactId>spring-all</artifactId>
-        <version>5.6.2.Final-SNAPSHOT</version>
+        <version>5.6.2.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -43,7 +43,7 @@
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.maven-surefire-plugin>2.9</version.maven-surefire-plugin>
         <version.org.springframwork>4.2.0.RELEASE</version.org.springframwork>
-        <version.narayana>5.6.2.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.6.2.Final</version.narayana>
         <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
         <version.log4j>1.2.16</version.log4j>
         <version.org.jboss.spec.javax.transaction>1.0.1.Final</version.org.jboss.spec.javax.transaction>
