--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.jboss.narayana.quickstarts.spring</groupId>
     <artifactId>spring-all</artifactId>
-    <version>5.6.2.Final-SNAPSHOT</version>
+    <version>5.6.2.Final</version>
     <packaging>pom</packaging>
 
     <name>Narayana and Spring Quickstarts</name>
