--- a/ArjunaJTA/recovery/pom.xml
+++ b/ArjunaJTA/recovery/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>quickstarts</artifactId>
-    <version>5.5.31.Final-SNAPSHOT</version>
+    <version>5.5.31.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>Recovery example
