--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ target/
 /tools/maven.zip
 
 .DS_Store
+ObjectStore/
 
 instantclient_11_2/
 jboss-as
@@ -20,6 +21,7 @@ instantclient-sdk-win32-11.2.0.1.0.zip
 wildfly-10.x.zip
 wildfly-10.*/
 wildfly-10.*.jar
+apache-tomcat-*
 narayana-full-*-bin.zip
 jboss*/
 bin/
