--- a/blacktie/integration1/xatmi_adapter/ear/pom.xml
+++ b/blacktie/integration1/xatmi_adapter/ear/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
     <artifactId>blacktie-quickstarts-integration1-xatmi_adapter-ear</artifactId>
-    <version>5.5.32.Final</version>
+    <version>5.5.33.Final-SNAPSHOT</version>
     <name>XATMI Adapter EAR</name>
     <packaging>ear</packaging>
     <description>A BlackTie component</description>
