--- a/XTS/wsat-jta-multi_hop/pom.xml
+++ b/XTS/wsat-jta-multi_hop/pom.xml
@@ -56,7 +56,7 @@
         <repository>
             <id>jboss-public-repository</id>
             <name>JBoss Repository</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
             <!-- These optional flags are designed to speed up your builds
        by reducing remote server calls -->
             <releases>
@@ -71,7 +71,7 @@
         <pluginRepository>
             <id>jboss-public-repository</id>
             <name>JBoss Repository</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
             <releases>
             </releases>
             <snapshots>
