--- a/jta-1_2-standalone/pom.xml
+++ b/jta-1_2-standalone/pom.xml
@@ -24,7 +24,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.narayana.quickstarts</groupId>
+    <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>jta-1_2-standalone</artifactId>
     <version>5.9.6.Final-SNAPSHOT</version>
 
@@ -37,13 +37,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.narayana>5.9.6.Final-SNAPSHOT</version.narayana>
         <version.jnpserver>5.0.3.GA</version.jnpserver>
         <version.junit>4.12</version.junit>
-        <version.weld>2.3.4.Final</version.weld>
-        <version.jboss-transaction-api>1.0.1.Final</version.jboss-transaction-api>
-        <version.log4j>1.2.17</version.log4j>
+        <version.weld>3.1.0.Final</version.weld>
+        <version.jboss-transaction-api>1.1.1.Final</version.jboss-transaction-api>
     </properties>
 
     <repositories>
@@ -60,17 +60,16 @@
         </repository>
     </repositories>
 
+    <build>
+        <finalName>${project.artifactId}</finalName>
+    </build>
+
     <dependencies>
+        <!-- Narayana JTA implementation and JTA spec interfaces -->
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
             <version>${version.narayana}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logmanager</groupId>
-                    <artifactId>jboss-logmanager</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
           <groupId>org.jboss.spec.javax.transaction</groupId>
@@ -92,9 +91,15 @@
         <!-- Standalone CDI container -->
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se</artifactId>
+            <artifactId>weld-se-core</artifactId>
             <version>${version.weld}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.module</groupId>
+            <artifactId>weld-jta</artifactId>
+            <version>${version.weld}</version>
+        </dependency>
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -102,20 +107,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <finalName>${project.artifactId}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.maven-compiler-plugin}</version>
-                <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
