--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -32,8 +32,6 @@
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
     <javaee6.with.tools.version>1.0.0.M7</javaee6.with.tools.version>
 
-    <undertow.io.version>2.0.11.Final</undertow.io.version>
-
     <!-- ssl debug: -Djavax.net.debug=ssl:handshake  http://docs.oracle.com/javase/6/docs/technotes/guides/security/jsse/JSSERefGuide.html#Debug
      -->
     <spdy.args>-Xbootclasspath/p:${basedir}/src/test/resources/grizzly-npn-bootstrap-1.0.jar -Drts.usespdy=true -Djavax.net.ssl.trustStore=keystore.jks -Djavax.net.ssl.trustStorePassword=123456</spdy.args>
@@ -215,15 +213,15 @@
     <dependency>
         <groupId>io.undertow</groupId>
         <artifactId>undertow-servlet</artifactId>
-        <version>${undertow.io.version}</version>
+        <version>[2.0.21,)</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>io.undertow</groupId>
         <artifactId>undertow-core</artifactId>
-        <version>${undertow.io.version}</version>
+        <version>[2.0.21,)</version>
         <scope>test</scope>
-        </dependency>
+    </dependency>
     <!-- end undertow with RestEasy -->
   </dependencies>
   <build>
