--- a/rts/lra/lra-coordinator/Dockerfile
+++ b/rts/lra/lra-coordinator/Dockerfile
@@ -1,6 +1,6 @@
 FROM fabric8/java-jboss-openjdk8-jdk:1.2.3
 
-ENV JAVA_APP_JAR lra-coordinator-swarm.jar
+ENV JAVA_APP_JAR lra-coordinator-thorntail.jar
 ENV AB_ENABLED off
 # to get more info about LRA processing in console you can add switch
 # -Dswarm.logging=TRACE
@@ -8,4 +8,4 @@ ENV JAVA_OPTIONS -Xmx512m -Dswarm.transactions.object-store-path=../../data
 
 EXPOSE 8080
 
-ADD target/lra-coordinator-swarm.jar /deployments/
+ADD target/lra-coordinator-thorntail.jar /deployments/
