JBTM-3177 Rename lra-filters module to narayana-lra

--- a/rts/lra-examples/cdi-participant/pom.xml
+++ b/rts/lra-examples/cdi-participant/pom.xml
@@ -94,7 +94,7 @@
         -->
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
-            <artifactId>lra-filters</artifactId>
+            <artifactId>narayana-lra</artifactId>
             <version>${project.version}</version>
         </dependency>
 
