--- a/at/bridge/pom.xml
+++ b/at/bridge/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.narayana.rts</groupId>
         <artifactId>restat</artifactId>
-        <version>5.9.7.Final</version>
+        <version>5.9.8.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
